<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">e_hayvan_android</string>
  <string name="app_name2">E-Hayvan</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_11_03_2023">11.03.2023</string>
  <string name="lbl_dobby">Dobby</string>
  <string name="lbl_your_email">Your email</string>
  <string name="lbl_your_clinic">Your clinic</string>
  <string name="lbl_clinic">Clinic</string>
  <string name="lbl_veterinarian">Veterinarian</string>
  <string name="msg_dog_3_years_o2">Dog | 3 years old
10.00 AM</string>
  <string name="msg_view_pet_profil">View Pet Profile</string>
  <string name="lbl_delete_pet">Delete Pet</string>
  <string name="msg_name_and_surnam">Name and Surname</string>
  <string name="msg_looks_like_you">Looks like you have no profiles set up at this moment, add your pet now</string>
  <string name="lbl_4_drops_left">4 Drops left </string>
  <string name="msg_hanna_blair">Hanna Blair                         8/10</string>
  <string name="lbl_age">Age</string>
  <string name="msg_already_have_an">Already have an account? Log in here!</string>
  <string name="lbl_bubu">Bubu</string>
  <string name="msg_frequency_of_dr">Frequency of Drop</string>
  <string name="lbl_dudu">Dudu</string>
  <string name="lbl_log_in">Log in</string>
  <string name="lbl_your_pet_s_age">Your pet\u2019s age </string>
  <string name="lbl_drops">Drops</string>
  <string name="lbl_change_password">Change Password</string>
  <string name="msg_cat_2_years_o">Cat | 2 years old
02.30 PM</string>
  <string name="lbl_your_pet_s_type">Your pet\u2019s type</string>
  <string name="msg_view_pet_record">View Pet Records</string>
  <string name="lbl_user_type">User Type</string>
  <string name="lbl_start_date">Start Date</string>
  <string name="lbl_sign_up">Sign up</string>
  <string name="msg_dog_2_years_o2">Dog | 2 years old
10.30 AM</string>
  <string name="msg_reserve_an_appo">Reserve an Appointment</string>
  <string name="msg_guy_hawkings">Guy Hawkings                    6/10</string>
  <string name="lbl_name">Name</string>
  <string name="lbl_hello">Hello,</string>
  <string name="msg_edit_pet_record">Edit Pet Records</string>
  <string name="lbl_e_mail_address">E-mail address</string>
  <string name="msg_dog_2_years_o">Dog | 2 years old</string>
  <string name="lbl_view_profile">View Profile</string>
  <string name="lbl_edit_profile">Edit Profile</string>
  <string name="msg_today_s_appoint">Today\u2019s Appointments</string>
  <string name="lbl_vaccines">Vaccines</string>
  <string name="lbl_number_of_drop">Number of Drop</string>
  <string name="lbl_pet_owner">Pet Owner</string>
  <string name="msg_estherdae_swe_c">estherdae@swe.com</string>
  <string name="lbl_medications">Medications</string>
  <string name="lbl_clevor">Clevor</string>
  <string name="lbl_2">2</string>
  <string name="lbl_dog">Dog</string>
  <string name="lbl_3">3</string>
  <string name="lbl_no_drops_added">No drops added</string>
  <string name="lbl_every_5_days">Every 5 Days </string>
  <string name="lbl_uh_oh">Uh Oh!</string>
  <string name="msg_welcome_please">Welcome! Please enter your information below and get started.</string>
  <string name="lbl_e_h_yv_n">E-H   YV   N  </string>
  <string name="msg_alice_ruth">Alice Ruth                         9/10</string>
  <string name="lbl_add_drops">Add Drops</string>
  <string name="msg_time_of_appoint">Time of Appointment</string>
  <string name="lbl_reserve">Reserve</string>
  <string name="lbl_3_years_old">3 years old</string>
  <string name="msg_already_have_an2">Already have an account?</string>
  <string name="lbl_esther_dae">Esther Dae</string>
  <string name="msg_active_pet_prof">Active pet profiles</string>
  <string name="lbl_add">Add</string>
  <string name="lbl_log_in_here"> Log in here!</string>
  <string name="lbl_dobby_clinic">Dobby Clinic</string>
  <string name="msg_dog_3_years_o">Dog | 3 years old</string>
  <string name="lbl_password">Password</string>
  <string name="lbl_add_pet_profile">Add Pet Profile</string>
  <string name="lbl_edit_pet_profile">Edit Pet Profile</string>
  <string name="lbl_add_pet">Add Pet</string>
  <string name="lbl_alice">Alice</string>
  <string name="msg_accept_terms_an">Accept Terms and Conditions</string>
  <string name="lbl_drop_name">Drop Name</string>
  <string name="lbl_esther">Esther</string>
  <string name="msg_edit_pet_profil">Edit Pet Profile</string>
  <string name="lbl_type">Type</string>
  <string name="lbl_your_pet_s_name">Your pet\u2019s name</string>
<string name="msg_please_enter_valid_nu">Please enter valid number</string>
<string name="msg_please_enter_valid_text">Please enter valid text</string>
  <string name="edit">Edit</string>
  <string name="msg_dont_have_an">Don\'t have an account? Sign up here!</string>
  <string name="msg_your_credent">Your credentials are incorrect. Try again!</string>
  <string name="dropdown_prompt">Select pet\'s type</string>
  <array name="dropdown_items">
    <item>Dog</item>
    <item>Cat</item>
    <item>Bird</item>
    <item>Other</item>
  </array>
</resources>
