<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="petOwnerDashboardVM" type="com.ehayvan.app.modules.petownerdashboard.data.viewmodel.PetOwnerDashboardVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearPetOwnerDashb"
        android:layout_height="match_parent"
        android:layout_width="match_parent" android:orientation="vertical">
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearPetOwnerDashb1"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylegray_50cornerRadius">
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearStatusBarNa"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylegray_50">
                <androidx.appcompat.widget.Toolbar
                    android:gravity="center_horizontal"
                    android:id="@+id/toolbarToolbar"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16pxh"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_24pxv"
                    android:layout_width="match_parent" app:contentInsetStart="0dp">
                    <LinearLayout android:id="@+id/linearNavigationHe"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent" android:orientation="horizontal">
                        <LinearLayout android:gravity="start"
                            android:id="@+id/linearColumnhello"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_1pxv"
                            android:layout_marginTop="@dimen/_1pxv"
                            android:layout_weight="0.94"
                            android:layout_width="0dp" android:orientation="vertical">
                            <TextView android:ellipsize="end"
                                android:id="@+id/txtHello"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="@dimen/_10pxh"
                                android:layout_width="wrap_content"
                                android:lineSpacingExtra="@dimen/_6pxh"
                                android:singleLine="true"
                                android:text="@{petOwnerDashboardVM.petOwnerDashboardModel.txtHello}"
                                style="@style/txtNotoSansnotosansregular14" tools:text="@string/lbl_hello"/>
                            <TextView android:ellipsize="end"
                                android:id="@+id/txtEsther"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="@dimen/_10pxh"
                                android:layout_marginTop="@dimen/_1pxv"
                                android:layout_width="wrap_content"
                                android:lineSpacingExtra="@dimen/_6pxh"
                                android:singleLine="true"
                                android:text="@{petOwnerDashboardVM.petOwnerDashboardModel.txtEsther}"
                                style="@style/txtNotoSansnotosanssemibold16" tools:text="@string/lbl_esther"/>
                        </LinearLayout>
                        <ImageView android:id="@+id/imageSearch"
                            android:layout_height="@dimen/_18pxh"
                            android:layout_marginBottom="@dimen/_13pxv"
                            android:layout_marginTop="@dimen/_13pxv"
                            android:layout_width="@dimen/_18pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_search"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_search"/>
                        <View android:background="@color/gray_300"
                            android:id="@+id/lineDivider"
                            android:layout_height="@dimen/_19pxv"
                            android:layout_marginBottom="@dimen/_12pxv"
                            android:layout_marginStart="@dimen/_15pxh"
                            android:layout_marginTop="@dimen/_12pxv"
                            android:layout_weight="0.0" android:layout_width="0dp"/>
                    </LinearLayout>
                </androidx.appcompat.widget.Toolbar>
                <View
                    android:background="@drawable/rectangle_gradient_s_bluegray_400_87_e_bluegray_400_87"
                    android:id="@+id/lineLine"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_1pxv"
                    android:layout_marginEnd="@dimen/_16pxh"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_20pxv" android:layout_width="@dimen/_327pxh"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearNavigationSe"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_21pxh"
                android:layout_marginStart="@dimen/_21pxh"
                android:layout_marginTop="@dimen/_23pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtText"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginTop="@dimen/_4pxv"
                    android:layout_weight="0.85"
                    android:layout_width="0dp"
                    android:lineSpacingExtra="@dimen/_6pxh"
                    android:singleLine="true"
                    android:text="@{petOwnerDashboardVM.petOwnerDashboardModel.txtText}"
                    style="@style/txtNotoSansnotosanssemibold16" tools:text="@string/msg_active_pet_prof"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnTwo"
                    android:layout_height="@dimen/_28pxh"
                    android:layout_marginStart="@dimen/_6pxh"
                    android:layout_width="@dimen/_25pxh"
                    android:lineSpacingExtra="@dimen/_6pxh"
                    android:paddingBottom="@dimen/_4pxv"
                    android:paddingEnd="@dimen/_8pxh"
                    android:paddingStart="@dimen/_8pxh"
                    android:paddingTop="@dimen/_4pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_2"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded_2" tools:text="@string/lbl_2"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearCardHorizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_12pxh"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_14pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStyleblue_1">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtTitle"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_24pxh"
                    android:layout_marginStart="@dimen/_24pxh"
                    android:layout_marginTop="@dimen/_39pxv"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_8pxh"
                    android:singleLine="true"
                    android:text="@{petOwnerDashboardVM.petOwnerDashboardModel.txtTitle}"
                    style="@style/txtNotoSansnotosanssemibold20" tools:text="@string/lbl_dudu"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtPrice"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_36pxv"
                    android:layout_marginEnd="@dimen/_24pxh"
                    android:layout_marginStart="@dimen/_24pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_6pxh"
                    android:singleLine="true"
                    android:text="@{petOwnerDashboardVM.petOwnerDashboardModel.txtPrice}"
                    style="@style/txtNotoSansnotosansregular14_1" tools:text="@string/msg_dog_3_years_o"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearCardHorizontal1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_13pxh"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_21pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStyleblue_1">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtTitleOne"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_22pxh"
                    android:layout_marginStart="@dimen/_22pxh"
                    android:layout_marginTop="@dimen/_39pxv"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_8pxh"
                    android:singleLine="true"
                    android:text="@{petOwnerDashboardVM.petOwnerDashboardModel.txtTitleOne}"
                    style="@style/txtNotoSansnotosanssemibold20" tools:text="@string/lbl_bubu"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtPriceOne"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_36pxv"
                    android:layout_marginEnd="@dimen/_22pxh"
                    android:layout_marginStart="@dimen/_22pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_6pxh"
                    android:singleLine="true"
                    android:text="@{petOwnerDashboardVM.petOwnerDashboardModel.txtPriceOne}"
                    style="@style/txtNotoSansnotosansregular14_1" tools:text="@string/msg_dog_2_years_o"/>
            </LinearLayout>
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearButtonsContain"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20pxv"
                android:layout_marginEnd="@dimen/_15pxh"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_87pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylecornerRadius_2">
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnAddPet"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_6pxh"
                    android:paddingBottom="@dimen/_18pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_18pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_add_pet"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded" tools:text="@string/lbl_add_pet"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
