<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="listPetRecordsRowModel" type="com.ehayvan.app.modules.editpetrecordstwo.data.model.ListPetRecordsRowModel"/>
    </data>
    <LinearLayout
        android:id="@+id/linearCardHorizontal"
        style="@style/groupStylewhite_1"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="@dimen/_19pxv"
        android:layout_marginEnd="@dimen/_10pxh"
        android:gravity="start"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTitleOne"
            style="@style/txtNotoSansnotosanssemibold14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_13pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:ellipsize="end"
            android:lineSpacingExtra="@dimen/_6pxh"
            android:singleLine="true"
            android:text="@{listPetRecordsRowModel.txtTitleOne}"
            tools:text="@string/lbl_clevor" />

        <LinearLayout
            android:id="@+id/linearBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_2pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginBottom="@dimen/_14pxv"
            android:gravity="start"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageVector"
                android:layout_width="@dimen/_12pxh"
                android:layout_height="@dimen/_13pxh"
                android:layout_marginStart="@dimen/_3pxh"
                android:layout_marginTop="@dimen/_3pxv"
                android:layout_marginBottom="@dimen/_3pxv"
                android:scaleType="fitXY"
                android:src="@drawable/img_vector_bluegray_202"
                tools:ignore="ContentDescription"
                tools:src="@drawable/img_vector_bluegray_202" />

            <TextView
                android:id="@+id/txtDate"
                style="@style/txtNotoSansnotosansmedium14_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_7pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.29"
                android:ellipsize="end"
                android:lineSpacingExtra="@dimen/_6pxh"
                android:singleLine="true"
                android:text="@{listPetRecordsRowModel.txtDate}"
                tools:text="@string/lbl_11_03_2023" />

            <View
                android:id="@+id/lineDivider"
                android:layout_width="0dp"
                android:layout_height="@dimen/_15pxv"
                android:layout_marginStart="@dimen/_12pxh"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_marginBottom="@dimen/_2pxv"
                android:layout_weight="0.0"
                android:background="@color/gray_300" />

            <TextView
                android:id="@+id/txtLanguage"
                style="@style/txtNotoSansnotosansmedium14_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.31"
                android:ellipsize="end"
                android:lineSpacingExtra="@dimen/_6pxh"
                android:singleLine="true"
                android:text='@{listPetRecordsRowModel.txtLanguage + " Drops left"}'
                tools:text="@string/lbl_4_drops_left" />

            <View
                android:id="@+id/lineDividerOne"
                android:layout_width="0dp"
                android:layout_height="@dimen/_15pxv"
                android:layout_marginStart="@dimen/_6pxh"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_marginBottom="@dimen/_2pxv"
                android:layout_weight="0.0"
                android:background="@color/gray_300" />

            <TextView
                android:id="@+id/txtDuration"
                style="@style/txtNotoSansnotosansmedium14_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_marginEnd="@dimen/_1pxh"
                android:layout_weight="0.34"
                android:ellipsize="end"
                android:lineSpacingExtra="@dimen/_6pxh"
                android:singleLine="true"
                android:text='@{"Every " + listPetRecordsRowModel.txtDuration + " Days"}'
                tools:text="@string/lbl_every_5_days" />
        </LinearLayout>
    </LinearLayout>
</layout>