<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="viewPetRecordsTwoVM" type="com.ehayvan.app.modules.viewpetrecordstwo.data.viewmodel.ViewPetRecordsTwoVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearViewPetRecord"
        android:layout_height="match_parent"
        android:layout_width="match_parent" android:orientation="vertical">
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearViewPetRecord1"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylegray_50cornerRadius">
            <androidx.appcompat.widget.Toolbar
                android:gravity="center_horizontal"
                android:id="@+id/toolbarToolbar"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16pxh"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_24pxv"
                android:layout_width="match_parent" app:contentInsetStart="0dp">
                <LinearLayout android:id="@+id/linearNavigationHead"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageArrowleft"
                        android:layout_height="@dimen/_10pxh"
                        android:layout_marginBottom="@dimen/_15pxv"
                        android:layout_marginStart="@dimen/_4pxh"
                        android:layout_marginTop="@dimen/_15pxv"
                        android:layout_width="@dimen/_11pxh"
                        android:scaleType="centerCrop"
                        circular="@{true}"
                        imageRes="@{@drawable/img_arrowleft}"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
                    <View android:background="@color/bluegray_50"
                        android:id="@+id/lineLineDivider"
                        android:layout_height="@dimen/_22pxv"
                        android:layout_marginBottom="@dimen/_9pxv"
                        android:layout_marginStart="@dimen/_12pxh"
                        android:layout_marginTop="@dimen/_9pxv"
                        android:layout_weight="0.0" android:layout_width="0dp"/>
                    <LinearLayout android:gravity="start"
                        android:id="@+id/linearColumnbody"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_7pxh"
                        android:layout_weight="0.72"
                        android:layout_width="0dp" android:orientation="vertical">
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtBody"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_10pxh"
                            android:layout_width="match_parent"
                            android:lineSpacingExtra="@dimen/_6pxh"
                            android:singleLine="true"
                            android:text="@{viewPetRecordsTwoVM.viewPetRecordsTwoModel.txtBody}"
                            style="@style/txtNotoSansnotosansregular14" tools:text="@string/msg_view_pet_record"/>
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtTitle"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_10pxh"
                            android:layout_width="wrap_content"
                            android:lineSpacingExtra="@dimen/_11pxh"
                            android:singleLine="true"
                            android:text="@{viewPetRecordsTwoVM.viewPetRecordsTwoModel.txtTitle}"
                            style="@style/txtCatamaranromansemibold16" tools:text="@string/lbl_drops"/>
                    </LinearLayout>
                    <androidx.appcompat.widget.AppCompatButton
                        android:ellipsize="end" android:gravity="center"
                        android:id="@+id/btnDudu"
                        android:layout_height="@dimen/_40pxv"
                        android:layout_marginStart="@dimen/_7pxh"
                        android:layout_width="@dimen/_65pxh"
                        android:lineSpacingExtra="@dimen/_6pxh"
                        android:paddingBottom="@dimen/_10pxv"
                        android:paddingEnd="@dimen/_14pxh"
                        android:paddingStart="@dimen/_14pxh"
                        android:paddingTop="@dimen/_10pxv"
                        android:singleLine="true"
                        android:text="@string/lbl_dudu"
                        android:textAllCaps="false"
                        style="@style/btnSolidRoundedOutline" tools:text="@string/lbl_dudu"/>
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
            <View
                android:background="@drawable/rectangle_gradient_s_bluegray_400_87_e_bluegray_400_87"
                android:id="@+id/lineLine"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_1pxv"
                android:layout_marginEnd="@dimen/_16pxh"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_9pxv" android:layout_width="@dimen/_327pxh"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearCardHorizontal"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_461pxv"
                android:layout_marginEnd="@dimen/_16pxh"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_18pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylewhite_1">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtTitleOne"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16pxh"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_13pxv"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_6pxh"
                    android:singleLine="true"
                    android:text="@{viewPetRecordsTwoVM.viewPetRecordsTwoModel.txtTitleOne}"
                    style="@style/txtNotoSansnotosanssemibold14" tools:text="@string/lbl_clevor"/>
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearBody"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_14pxv"
                    android:layout_marginEnd="@dimen/_16pxh"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_2pxv"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageVector"
                        android:layout_height="@dimen/_13pxh"
                        android:layout_marginBottom="@dimen/_3pxv"
                        android:layout_marginStart="@dimen/_3pxh"
                        android:layout_marginTop="@dimen/_3pxv"
                        android:layout_width="@dimen/_12pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_vector_bluegray_202"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_vector_bluegray_202"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txt11032023"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_7pxh"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_weight="0.29"
                        android:layout_width="0dp"
                        android:lineSpacingExtra="@dimen/_6pxh"
                        android:singleLine="true"
                        android:text="@{viewPetRecordsTwoVM.viewPetRecordsTwoModel.txt11032023}"
                        style="@style/txtNotoSansnotosansmedium14_3" tools:text="@string/lbl_11_03_2023"/>
                    <View android:background="@color/gray_300"
                        android:id="@+id/lineDivider"
                        android:layout_height="@dimen/_15pxv"
                        android:layout_marginBottom="@dimen/_2pxv"
                        android:layout_marginStart="@dimen/_12pxh"
                        android:layout_marginTop="@dimen/_2pxv"
                        android:layout_weight="0.0" android:layout_width="0dp"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtLanguage"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5pxh"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_weight="0.31"
                        android:layout_width="0dp"
                        android:lineSpacingExtra="@dimen/_6pxh"
                        android:singleLine="true"
                        android:text="@{viewPetRecordsTwoVM.viewPetRecordsTwoModel.txtLanguage}"
                        style="@style/txtNotoSansnotosansmedium14_3" tools:text="@string/lbl_4_drops_left"/>
                    <View android:background="@color/gray_300"
                        android:id="@+id/lineDividerOne"
                        android:layout_height="@dimen/_15pxv"
                        android:layout_marginBottom="@dimen/_2pxv"
                        android:layout_marginStart="@dimen/_6pxh"
                        android:layout_marginTop="@dimen/_2pxv"
                        android:layout_weight="0.0" android:layout_width="0dp"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtDuration"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_1pxh"
                        android:layout_marginStart="@dimen/_5pxh"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_weight="0.34"
                        android:layout_width="0dp"
                        android:lineSpacingExtra="@dimen/_6pxh"
                        android:singleLine="true"
                        android:text="@{viewPetRecordsTwoVM.viewPetRecordsTwoModel.txtDuration}"
                        style="@style/txtNotoSansnotosansmedium14_3" tools:text="@string/lbl_every_5_days"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
